src/scss/postup/_day-04-stashed-features.scss
// Stashed features
.stashed-features_wrapper {
	display: flex;
	justify-content: start;
	margin: 1rem auto;
	gap: 0.5rem;
	cursor: grab;
	overflow: visible;
	width: 100vw;
	max-width: $content-max-width;
}

.stashed-features_grid-container {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	grid-template-rows: auto;
	gap: 1rem;
	overflow-x: scroll; /* Enable horizontal scroll */
	scroll-snap-type: x mandatory;
	max-width: none;
	width: fit-content;
}

.carousel-nav-arrows_wrapper {
	display: flex;
	gap: 1rem;
	list-style-type: none;
	justify-content: flex-end;
	flex-direction: row;

	li {
		padding: 0;
		transform: none;
	}
}

.carousel-nav-arrow {
	width: 2.25rem;
	height: 2.25rem;
	justify-content: center;
	align-items: center;
	border-radius: 100%;
	background-color: #f0f0f0;
	transition: opacity 0.3s ease-in-out;

	svg {
		width: 100%;
		fill: #555555;
	}
}

.stashed-feature_card {
	scroll-snap-align: center;
	scroll-snap-stop: always;
	display: flex;
	flex-direction: column;
	padding: 2rem;
	border-radius: 1rem;
	background-color: #f9f9f9;
	height: fit-content;
	width: 80vw;
	max-width: 18.75rem;
	// max-width: 18.75rem;
	transform: none !important;
	box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.05);

	&.first-child {
		margin-left: 5vw;
	}

	&.last-child {
		margin-right: 5vw;
	}
}

.stashed-feature_icon-wrapper {
	width: 2.75rem;
	height: 2.75rem;
	margin-bottom: 1.25rem;
}

.stashed-feature_icon {
	width: 100%;
}

.stashed-feature_copy-wrapper {
	display: block;
	width: 100%;
}

$stashed-feature-font-color: $black;

.stashed-feature_heading {
	font-size: 1.25rem;
	font-weight: 500 !important;
	margin-bottom: 0.5rem;
	color: $stashed-feature-font-color !important;
}

.stashed-feature_body {
	display: flex;
	font-size: 1.125rem;
	color: $stashed-feature-font-color !important;
	margin-bottom: 0;
}

@include breakpoint(med) {
	.stashed-features_wrapper {
		width: $content-max-width;
		align-items: center;
		justify-content: center;
		margin-left: auto;
		margin-right: auto;
		cursor: default;
	}

	ul.stashed-features_grid-container {
		grid-template-rows: 1fr 1fr;
		grid-template-columns: repeat(2, 1fr);
		width: 100%;
		margin-left: auto;
		margin-right: auto;
		justify-self: center;
		align-self: center;

		li:last-child {
			margin: 0;
		}
	}

	li.stashed-feature_card {
		display: flex;
		padding: 2rem;
		border-radius: 1rem;
		background-color: #f9f9f9;
		height: 100%;
		width: 100%;
		max-width: none;
		flex: 1;
		transform: none !important;
		box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.05);

		&.first-child,
		&.last-child {
			margin: 0;
		}
	}

	.carousel-nav-arrow {
		display: none;
	}

	.stashed-feature_icon-wrapper {
		width: 4rem;
		height: 4rem;
		margin-bottom: 1.5rem;
	}

	.stashed-feature_icon {
		width: 100%;
	}

	.stashed-feature_copy-wrapper {
		display: block;
		width: 100%;
		margin: auto;
	}

	.stashed-feature_heading {
		font-size: 1.5rem;
		font-weight: 500 !important;
		margin-bottom: 0.5rem;
	}

	.stashed-feature_body {
		font-size: 1.125rem;
		margin-bottom: 0;
	}
}

